--- a/index.html
+++ b/index.html
@@ -9,5 +9,18 @@
     <script defer src="main.js"></script>
 </head>
 <body>
+    <ul id="scoreBoard">
+        <li id="info">LEVEL</li>
+        <li id="level"></li>
+        <li id="info">SCORE</li>
+        <li id="score"></li>
+        <li id="info">NEXT</li>
+        <li id="next"></li>
+        <li id="info">HELP</li>
+        <li id="help">← ↓ →</li>
+        <li id="help">Space Bar</li>
+        <li id="help">p to pause</li>
+        <li id="info">ABOUT</li>
+    </ul>
 </body>
 </html>
