--- a/index.html
+++ b/index.html
@@ -9,18 +9,40 @@
     <script defer src="main.js"></script>
 </head>
 <body>
-    <ul id="scoreBoard">
-        <li id="info">LEVEL</li>
-        <li id="level"></li>
-        <li id="info">SCORE</li>
-        <li id="score"></li>
-        <li id="info">NEXT</li>
-        <li id="next"></li>
-        <li id="info">HELP</li>
-        <li id="help">← ↓ →</li>
-        <li id="help">Space Bar</li>
-        <li id="help">p to pause</li>
-        <li id="info">ABOUT</li>
-    </ul>
+    <div id="gameField">
+        <div id="gameover">
+            <div class="center">
+                <h1>Game Over</h1>
+                <h4>press 'F5' to restart</h4>
+            </div>
+        </div>
+        <div id="pause">
+            <div class="center">
+                <h1>pause</h1>
+                <h4>press 'F5' to resume</h4>
+            </div>
+        </div>
+    </div>
+    <table id="nextTable">
+        <tr><td id="00"></td><td id="01"></td><td id="02"></td><td id="03"></td></tr>
+        <tr><td id="10"></td><td id="11"></td><td id="12"></td><td id="13"></td></tr>
+        <tr><td id="20"></td><td id="21"></td><td id="22"></td><td id="23"></td></tr>
+        <tr><td id="30"></td><td id="31"></td><td id="32"></td><td id="33"></td></tr>
+    </table>
+
+    </table>
+    <div id="scoreField">
+        <p class="sub">LEVEL</p>
+        <p id="level"></p>
+        <p class="sub">SCORE</p>
+        <p id="score"></p>
+        <p class="sub">NEXT</p>
+        <p id="next"></p>
+        <p class="sub">HELP</p>
+        <p id="help">← ↓ →</p>
+        <p id="help">Space Bar</p>
+        <p id="help">p to pause</p>
+        <p class="sub">ABOUT</p>
+    </div>
 </body>
 </html>
