--- a/index.html
+++ b/index.html
@@ -1,47 +1,68 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="style.css">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="style.css" />
     <title>Document</title>
     <script defer src="main.js"></script>
-</head>
-<body>
+  </head>
+  <body>
     <div id="gameField">
-        <div id="gameover">
-            <div class="center">
-                <h1>Game Over</h1>
-                <h4>press 'F5' to restart</h4>
-            </div>
+      <div id="gameover">
+        <div class="center">
+          <h1>Game Over</h1>
+          <h4>press 'F5' to restart</h4>
         </div>
-        <div id="pause">
-            <div class="center">
-                <h1>pause</h1>
-                <h4>press 'F5' to resume</h4>
-            </div>
+      </div>
+      <div id="pause">
+        <div class="center">
+          <h1>pause</h1>
+          <h4>press 'F5' to resume</h4>
         </div>
+      </div>
     </div>
     <table id="nextTable">
-        <tr><td id="00"></td><td id="01"></td><td id="02"></td><td id="03"></td></tr>
-        <tr><td id="10"></td><td id="11"></td><td id="12"></td><td id="13"></td></tr>
-        <tr><td id="20"></td><td id="21"></td><td id="22"></td><td id="23"></td></tr>
-        <tr><td id="30"></td><td id="31"></td><td id="32"></td><td id="33"></td></tr>
+      <tr>
+        <td id="00"></td>
+        <td id="01"></td>
+        <td id="02"></td>
+        <td id="03"></td>
+      </tr>
+      <tr>
+        <td id="10"></td>
+        <td id="11"></td>
+        <td id="12"></td>
+        <td id="13"></td>
+      </tr>
+      <tr>
+        <td id="20"></td>
+        <td id="21"></td>
+        <td id="22"></td>
+        <td id="23"></td>
+      </tr>
+      <tr>
+        <td id="30"></td>
+        <td id="31"></td>
+        <td id="32"></td>
+        <td id="33"></td>
+      </tr>
     </table>
 
     <div id="scoreField">
-        <p class="sub">LEVEL</p>
-        <p id="level"></p>
-        <p class="sub">SCORE</p>
-        <p id="score"></p>
-        <p class="sub">NEXT</p>
-        <p><br><br><br></p>
-        <p class="sub">HELP</p>
-        <p id="help">← ↓ →</p>
-        <p id="help">Space Bar</p>
-        <p id="help">p to pause</p>
-        <p class="sub">ABOUT</p>
+      <p class="sub">LEVEL</p>
+      <p id="level"></p>
+      <p class="sub">SCORE</p>
+      <p id="score"></p>
+      <p class="sub">NEXT</p>
+      <p><br /><br /><br /></p>
+      <p class="sub">HELP</p>
+      <p id="help">← ↓ →</p>
+      <p id="help">Space Bar</p>
+      <p id="help">p to pause</p>
+      <p class="sub">ABOUT</p>
+      <div id="comboField"></div>
     </div>
-</body>
+  </body>
 </html>
